fixed text alignments and disabled some animations

--- a/src/pages/Header/header.scss
+++ b/src/pages/Header/header.scss
@@ -303,6 +303,8 @@ border-radius: 10px;
                         }
                         @media (max-width: 479px) {
                             flex-direction: row;
+                            width: 100%;
+                            justify-content: space-between;
                         }
                     p {
                         transform: rotate(0.75turn);
@@ -324,8 +326,8 @@ border-radius: 10px;
                          }
                          @media (max-width: 479px) {
                             transform: rotate(0turn);
-                            font-size: 3rem;
-                            padding-left: 2rem;
+                            font-size: 2.5rem;
+                            // padding-left: 2rem;
                          }
                     }
                     svg {
@@ -396,6 +398,8 @@ border-radius: 10px;
                         }
                         @media (max-width: 479px) {
                             flex-direction: row;
+                            width: 100%;
+                            justify-content: space-between;
                         }
                         p {
                             transform: rotate(0.75turn);
@@ -417,8 +421,8 @@ border-radius: 10px;
                              }
                              @media (max-width: 479px) {
                                 transform: rotate(0turn);
-                                font-size: 3rem;
-                                padding-left: 2rem;
+                                font-size: 2.5rem;
+                                // padding-left: 2rem;
                              }
                         }
                         svg {
@@ -489,6 +493,8 @@ border-radius: 10px;
                         }
                         @media (max-width: 479px) {
                             flex-direction: row;
+                            width: 100%;
+                            justify-content: space-between;
                         }
                         p {
                             transform: rotate(0.75turn);
@@ -510,8 +516,8 @@ border-radius: 10px;
                              }
                              @media (max-width: 479px) {
                                 transform: rotate(0turn);
-                                font-size: 3rem;
-                                padding-left: 2rem;
+                                font-size: 2.5rem;
+                                // padding-left: 2rem;
                              }
                         }
                         svg {
@@ -582,6 +588,8 @@ border-radius: 10px;
                         }
                         @media (max-width: 479px) {
                             flex-direction: row;
+                            width: 100%;
+                            justify-content: space-between;
                         }
                         p {
                             transform: rotate(0.75turn);
@@ -603,8 +611,8 @@ border-radius: 10px;
                              }
                              @media (max-width: 479px) {
                                 transform: rotate(0turn);
-                                font-size: 3rem;
-                                padding-left: 2rem;
+                                font-size: 2.5rem;
+                                // padding-left: 2rem;
                              }
                         }
                         svg {
